@@ -73,7 +73,7 @@ public class CloudSolrStream extends TupleStream implements Expressible {
 
   protected String zkHost;
   protected String collection;
-  protected SolrParams params;
+  protected ModifiableSolrParams params;
   protected Map<String, String> fieldMappings;
   protected StreamComparator comp;
   private boolean trace;
@@ -172,23 +172,13 @@ public class CloudSolrStream extends TupleStream implements Expressible {
     // collection
     expression.addParameter(collection);
     
-    ModifiableSolrParams mParams = new ModifiableSolrParams(SolrParams.toMultiMap(params.toNamedList()));
-    for (Entry<String, String[]> param : mParams.getMap().entrySet()) {
-
-      if(param.getKey().equals("fq")) {
-        for(String fqParam : param.getValue()) {
-          // See comment below for params containg a " character
-          expression.addParameter(new StreamExpressionNamedParameter(param.getKey(), 
-              fqParam.replace("\"", "\\\"")));
-        }
-       } else {
-        String value = String.join(",", param.getValue());
-
-        // SOLR-8409: This is a special case where the params contain a " character
+    for (Entry<String, String[]> param : params.getMap().entrySet()) {
+      for (String val : param.getValue()) {
+        // SOLR-8409: Escaping the " is a special case.
         // Do note that in any other BASE streams with parameters where a " might come into play
         // that this same replacement needs to take place.
-        value = value.replace("\"", "\\\"");
-        expression.addParameter(new StreamExpressionNamedParameter(param.getKey(), value));
+        expression.addParameter(new StreamExpressionNamedParameter(param.getKey(),
+            val.replace("\"", "\\\"")));
       }
     }
     
